--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -1,1 +1,19 @@
-/* Write your CSS here */
+.not-found-image {
+  width: 380px;
+}
+
+.not-found-title {
+  font-family: Roboto;
+  font-size: 32px;
+  font-weight: 700;
+}
+
+.not-found-description {
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 500;
+  max-width: 500px;
+  text-align: center;
+  color: #616e7c;
+  margin-top: 0;
+}
