--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,23 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.route-container {
+  height: 70vh;
+  display: grid;
+  place-items: center;
+}
+
+.route-image-lg {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .route-image-lg {
+    display: inline;
+  }
+
+  .route-image-sm {
+    display: none;
+  }
+}
